--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="project_description">El sector turístico de Nayarit es una de las áreas estratégicas del estado y al igual que en otras partes del mundo, puede y debe beneficiarse del desarrollo de aplicaciones basadas en TIC para mantener y mejorar su competitividad a nivel nacional e internacional. Dentro de las actividades del laboratorio “Innovatic-lab” de CICESE-UT3 se encuentra el desarrollo de aplicaciones tecnológicas para los dos sectores prioritarios del estado: la agroindustria y el turismo. Dentro de las aplicaciones para el sector turístico, está el desarrollo de una aplicación móvil que implemente funcionalidades de realidad aumentada para mejorar la experiencia de los visitantes al primer cuadro del centro histórico de Tepic.</string>
+
 </resources>
