Radio Button funcionales
Se agrega valdiación de radio button pero al agregar el date picker
causa error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="title_excelente">Excelente</string>
     <string name="btn_regresar">Regresar</string>
     <string name="btn_cancelar">Cancelar</string>
+    <string name="btn_aceptar">Aceptar</string>
 
     <string name="title_pois">Puntos de interes</string>
 
