--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,8 @@
     <string name="pregp">¿Cómo consideras que fue la limpieza del centro histórico en tu estadia por Tepic?</string>
     <string name="title_activity_path_poi">Map</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
